# Amcrest-HACS

./: .gitignore  .secrets.example.json  AGENTS.md  PROJECT_CHECKLIST.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.agents/skills/on-screen/: SKILL.md
.agents/skills/on-screen/agents/: openai.yaml
.claude/skills/on-screen/: SKILL.md
custom_components/amcrest_ad410/: __init__.py  api.py  binary_sensor.py  camera.py  config_flow.py  const.py  device_trigger.py  diagnostics.py  event.py  event_parser.py  manifest.json  media_player.py  runtime.py  services.yaml  stream_profiles.py
custom_components/amcrest_ad410/translations/: en.json
ha_config/: README.md  automations.yaml  scenes.yaml  scripts.yaml
scripts/: ha_api.ps1  sync_ha_config.ps1
tests/: test_device_trigger.py  test_event_parser.py  test_stream_profiles.py
