[project]
name = "amcrest-ad410-hacs"
version = "0.1.0"
description = "Home Assistant HACS custom integration for the Amcrest AD410 video doorbell"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  # Match the deployed Home Assistant Container version.
  "homeassistant==2026.2.2",
  "pytest>=8.0",
  "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
